--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
     <script>
         if (navigator.language.substring(0, 2) == 'zh') {
-            location.assign('./zh-Hans');
+            location.assign('./zh');
         } else {
             location.assign('./en');
         }
