--- a/zh/index.html
+++ b/zh/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css" />
     <link rel="stylesheet" href="../assets/style.css" />
 
-    <title>LiteLoaderBDS文档</title>
+    <title>GMLIB文档</title>
 </head>
 
 <body>
