--- a/zh/index.html
+++ b/zh/index.html
@@ -30,7 +30,7 @@
             onlyCover: true,
 
             search: {
-                namespace: 'zh'
+                namespace: 'zh-Hans'
             },
             pagination: {
                 crossChapter: true,
