--- a/zh-Hans/index.html
+++ b/zh-Hans/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/themes/vue.css" class="theme-css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/sidebar.min.css" />
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css" />
@@ -17,6 +16,7 @@
     <div id="app">加载中...</div>
 
     <script>
+        /*
         window.$docsify = {
             repo: 'GroupMountain/GMLIB',
             loadNavbar: true,
@@ -44,6 +44,8 @@
                 }
             ]
         }
+        */
+        location.assign('Main');
     </script>
 
     <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
