--- a/zh-Hans/index.html
+++ b/zh-Hans/index.html
@@ -45,7 +45,7 @@
             ]
         }
         */
-        location.assign('Main');
+        location.assign('./Main.html');
     </script>
 
     <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
