--- a/site/develop/index.html
+++ b/site/develop/index.html
@@ -689,9 +689,9 @@
 <h1 id="lse">脚本插件开发（LSE）</h1>
 <ul>
 <li><code>GMLIB</code> 本身并不提供脚本插件API，你需要安装扩展模块 <code>GMLIB-LegacyRemoteCallApi</code></li>
-<li>安装完前置模块后，正常创建插件并导入API
-使用示例：</li>
+<li>安装完前置模块后，正常创建插件并导入API</li>
 </ul>
+<p>使用示例：</p>
 <pre><code class="language-javascript">const { Minecraft } = require('./GMLIB-LegacyRemoteCallApi/lib/GMLIB_API-JS');
 </code></pre>
 <ul>
