--- a/site/lse/Import/index.html
+++ b/site/lse/Import/index.html
@@ -688,6 +688,10 @@
 <ul>
 <li>目前仅支持 QuickJs 和 NodeJs，其它语言暂未提供快捷导入方式，可自行使用 <code>RemoteCall</code> 接口导入</li>
 </ul>
+<blockquote>
+<p>注意：
+若无特殊说明，一切API均需要在 <code>onServerStarted</code> 之后调用</p>
+</blockquote>
 <h1 id="_2">导入你所需要的类</h1>
 <h3 id="gmlib-legacyremotecallapi">目前 <code>GMLIB-LegacyRemoteCallApi</code> 提供了以下类</h3>
 <ul>
